--- a/new-linux-setup.org
+++ b/new-linux-setup.org
@@ -10,14 +10,14 @@ GNOME_VERSION=`gnome-shell --version | cut -d ' ' -f 3 | tr -d '\n'`
 mkdir ~/bin
 mkdir -p ~/tmp/vim_backup
 
-echo -e'\nRunning apt upgrade before anything else'
+echo -e '\nRunning apt upgrade before anything else'
 sudo apt -y upgrade
 
 # add chrome repo & key
 wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
 echo 'deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main' | sudo tee /etc/apt/sources.list.d/google-chrome.list
 
-echo -e'\nInstalling packages with apt'
+echo -e '\nInstalling packages with apt'
 sudo apt-add-repository -y ppa:teejee2008/ppa
 sudo add-apt-repository -y ppa:hluk/copyq
 sudo add-apt-repository -y ppa:numix/ppa
@@ -31,7 +31,7 @@ sudo apt -y install curl vim xcape vlc xsel python-pygments openssh-server \
 sudo apt -y autoremove
 
 # dotfiles
-echo -e'\nlinking dotfiles'
+echo -e '\nlinking dotfiles'
 cd ~
 mv .bashrc .bashrc-original
 ln -s dotfiles/.spacemacs
@@ -46,19 +46,19 @@ ln -s dotfiles/.lessfilter
 ln -s dotfiles/.tmux.conf
 
 # vim:
-echo -e'\nInstalling vim extensions'
+echo -e '\nInstalling vim extensions'
 mkdir -p ~/.vim/autoload ~/.vim/bundle && curl -LSso ~/.vim/autoload/pathogen.vim https://tpo.pe/pathogen.vim
 
 # spacemacs
-echo -e'\nInstalling spacemacs'
+echo -e '\nInstalling spacemacs'
 git clone https://github.com/syl20bnr/spacemacs ~/.emacs.d
 
 # gnome extensions (most need to be manually installed)
-echo -e'\nInstalling gnome extensions'
+echo -e '\nInstalling gnome extensions'
 sudo apt -y remove gnome-shell-extension-ubuntu-dock && sudo apt -y install gnome-shell-extension-dashtodock
 sudo apt -y install gnome-shell-extension-no-annoyance
 
-echo -e'\nInstalling cdhist'
+echo -e '\nInstalling cdhist'
 # https://github.com/bulletmark/cdhist
 cd ~/tmp
 git clone http://github.com/bulletmark/cdhist
@@ -66,6 +66,7 @@ cd cdhist
 sudo pip3 install .
 sudo curl https://raw.githubusercontent.com/bulletmark/cdhist/master/cdhist.bashrc > ~/bin/cdhist.bashrc
 
+echo -e '\nMiscellaneous steps'
 # rename volume-change bleep to hide it, because it's annoying
 sudo mv /usr/share/sounds/freedesktop/stereo/audio-volume-change.oga /usr/share/sounds/freedesktop/stereo/audio-volume-change.oga.backup
 
@@ -87,7 +88,7 @@ echo 'eval "$(jenv init -)"' >> ~/.bash_profile
 curl https://raw.githubusercontent.com/technomancy/leiningen/stable/bin/lein > ~/bin/lein
 chmod a+x ~/bin/lein
 
-wget https://raw.githubusercontent.com/tmuxinator/tmuxinator/master/completion/tmuxinator.bash ~/bin/tmuxinator.bash
+wget https://raw.githubusercontent.com/tmuxinator/tmuxinator/master/completion/tmuxinator.bash > ~/bin/tmuxinator.bash
 
 # TODO - not working, why?
 # keybase (for DW)
@@ -106,12 +107,13 @@ dconf write /org/gnome/desktop/interface/icon-theme "'Numix-Circle'"
 dconf write /org/gnome/desktop/wm/keybindings/panel-main-menu "['<Super>space']"
 dconf write /org/gnome/desktop/wm/keybindings/close "['<Super>q']"
 
-echo -e'\nSetup script finished!'
+echo -e '\nSetup script finished!'
 
 : <<'NON_EXECUTABLE_ORG_MODE'
 ^ see https://stackoverflow.com/a/46049228 for details on making the rest non-executable
 
 * Note: `dconf watch /` to observe the results of settings changes so they can be recorded here
+* Can track settings changes longer-term by putting the output of `gsettings list-recursively` under source control.
 * Installation:
 ** Creating bootable USB stick on mac: https://linuxnewbieguide.org/how-to-put-a-linux-iso-onto-a-usb-stick-and-make-it-bootable-on-a-mac/
 ** Having some trouble with getting it to boot on the machine. See also linux-on-p51.org
