--- a/new-linux-setup.org
+++ b/new-linux-setup.org
@@ -7,6 +7,10 @@ set -euxo pipefail
 
 GNOME_VERSION=`gnome-shell --version | cut -d ' ' -f 3 | tr -d '\n'`
 
+# TODO .spacemacs fixes
+# - why do I get that damn public key error?
+# - can't install undo-tree (is it included in 26?)
+
 mkdir ~/bin
 mkdir -p ~/tmp/vim_backup
 
@@ -27,8 +31,13 @@ sudo apt -y install curl vim xcape vlc xsel python-pygments openssh-server \
   autojump tmuxinator gnome-sushi rename hardinfo jq lm-sensors firefox git copyq \
   gnome-tweak-tool gnome-shell-extensions python-setuptools aptik aptik-gtk \
   google-chrome-stable numix-icon-theme-circle numix-icon-theme-square clojure \
-  openjdk-11-jdk openjdk-8-jdk python3-pip fonts-firacode fonts-hack-ttf
+  openjdk-11-jdk openjdk-8-jdk python3-pip fonts-firacode fonts-hack-ttf emacs \
+  net-tools chromium-browser tree
 sudo apt -y autoremove
+
+echo -e '\nInstalling snaps (sigh)'
+sudo snap install slack   --classic
+sudo snap install kubectl --classic
 
 # dotfiles
 echo -e '\nlinking dotfiles'
@@ -44,6 +53,7 @@ ln -s dotfiles/.gitconfig
 ln -s dotfiles/.inputrc
 ln -s dotfiles/.lessfilter
 ln -s dotfiles/.tmux.conf
+ln -s dotfiles/.tmuxinator
 
 # vim:
 echo -e '\nInstalling vim extensions'
@@ -51,13 +61,20 @@ mkdir -p ~/.vim/autoload ~/.vim/bundle && curl -LSso ~/.vim/autoload/pathogen.vi
 cd ~/.vim/bundle && git clone git://github.com/altercation/vim-colors-solarized.git
 
 # spacemacs
+# TODO may need to add
 echo -e '\nInstalling spacemacs'
+cd
 git clone https://github.com/syl20bnr/spacemacs ~/.emacs.d
 
 # gnome extensions (most need to be manually installed)
 echo -e '\nInstalling gnome extensions'
 sudo apt -y remove gnome-shell-extension-ubuntu-dock && sudo apt -y install gnome-shell-extension-dashtodock
 sudo apt -y install gnome-shell-extension-no-annoyance
+
+echo -e `\nInstalling Signal desktop`
+curl -s https://updates.signal.org/desktop/apt/keys.asc | sudo apt-key add -
+echo "deb [arch=amd64] https://updates.signal.org/desktop/apt xenial main" | sudo tee -a /etc/apt/sources.list.d/signal-xenial.list
+sudo apt update && sudo apt install signal-desktop
 
 echo -e '\nInstalling cdhist'
 # https://github.com/bulletmark/cdhist
@@ -74,27 +91,39 @@ echo '\n'                      >> ~/.ssh/config
 echo 'Host *'                  >> ~/.ssh/config
 echo 'ServerAliveInterval 240' >> ~/.ssh/config
 
+# tmux
+# n.b. git clone will create parent dirs
+git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
+
 # No message-of-the-day
 touch ~/.hushlogin
 
 # jenv
+# TODO maybe .bash_profile isn't being sourced?
 git clone https://github.com/gcuisinier/jenv.git ~/bin/.jenv
 echo 'export PATH="$HOME/bin/.jenv/bin:$PATH"' >> ~/.bash_profile
 echo 'eval "$(jenv init -)"' >> ~/.bash_profile
+# TODO I haven't confirmed that this works during setup:
+source ~/.bash_profile
+jenv add /usr/lib/jvm/java-11-openjdk-amd64
+jenv add /usr/lib/jvm/java-8-openjdk-amd64
 # then see [[MAKE NOTE]] & add to this section
 
 # leiningen
 curl https://raw.githubusercontent.com/technomancy/leiningen/stable/bin/lein > ~/bin/lein
 chmod a+x ~/bin/lein
 
-wget https://raw.githubusercontent.com/tmuxinator/tmuxinator/master/completion/tmuxinator.bash > ~/bin/tmuxinator.bash
+curl https://raw.githubusercontent.com/tmuxinator/tmuxinator/master/completion/tmuxinator.bash > ~/bin/tmuxinator.bash
+source ~/bin/tmuxinator.bash
 
-# TODO - not working, why?
+# pcloud
+cd ~/tmp
+curl  > pcloud-installer
+
 # keybase (for DW)
-# cd ~/tmp
-# curl --remote-name https://prerelease.keybase.io/keybase_amd64.deb
-# sudo apt -y install ./keybase_amd64.deb
-# run_keybase
+cd ~/tmp
+curl --remote-name https://prerelease.keybase.io/keybase_amd64.deb
+sudo apt -y install ./keybase_amd64.deb
 
 # some settings accessible in Settings and/or gnome-tweak-tool
 dconf write /org/gnome/desktop/input-sources/sources "[('xkb', 'us+dvorak')]"
@@ -103,11 +132,35 @@ dconf write /org/gnome/settings-daemon/plugins/color/night-light-enabled true
 dconf write /org/gnome/mutter/overlay-key "'Super_R'"
 dconf write /org/gnome/desktop/input-sources/xkb-options "['ctrl:swap_lalt_lctl', 'ctrl:swap_rwin_rctl', 'compose:rctrl', 'caps:swapescape']"
 dconf write /org/gnome/desktop/interface/icon-theme "'Numix-Circle'"
-dconf write /org/gnome/desktop/wm/keybindings/panel-main-menu "['<Super>space']"
+dconf write /org/gnome/shell/keybindings/toggle-overview "['<Super>space']"
 dconf write /org/gnome/desktop/wm/keybindings/close "['<Super>q']"
+dconf write /org/gnome/desktop/peripherals/mouse/accel-profile 'adaptive'
+# no middle-mouse-click-to-paste
+dconf write /org/gnome/desktop/interface/gtk-enable-primary-paste false
+dconf write /org/gnome/desktop/peripherals/mouse/speed -0.4245
+dconf write /org/gnome/shell/extensions/dash-to-dock/hide-delay 0.3
+dconf write /org/gnome/shell/extensions/dash-to-dock/intellihide-mode 'ALL_WINDOWS'
+dconf write /org/gnome/shell/extensions/dash-to-dock/dock-position 'BOTTOM'
+dconf write /org/gnome/desktop/peripherals/touchpad/send-events 'disabled'
+dconf write /org/gnome/terminal/legacy/keybindings/paste '<Primary>v'
+dconf write /org/gnome/nautilus/preferences/default-folder-viewer 'list-view'
+dconf write /org/gtk/settings/file-chooser/sort-directories-first false
+dconf write /org/gnome/nautilus/list-view/use-tree-view true
+dconf write /org/gnome/nautilus/preferences/show-delete-permanently true
+dconf write /org/gnome/nautilus/list-view/default-column-order "['name', 'size', 'type', 'owner', 'group', 'permissions', 'mime_type', 'where', 'date_modified', 'date_modified_with_time', 'date_accessed', 'recency']"
+dconf write /org/gnome/shell/favorite-apps "['org.gnome.Terminal.desktop', 'emacs25.desktop', 'firefox.desktop', 'org.gnome.Nautilus.desktop', 'slack_slack.desktop', 'gnome-control-center.desktop', 'gnome-system-monitor_gnome-system-monitor.desktop', 'chromium-browser.desktop', 'google-chrome.desktop', 'signal-desktop.desktop']"
+dconf write /org/gnome/gnome-system-monitor/graph-update-interval 3000
+dconf write /org/gnome/gnome-system-monitor/cpu-stacked-area-chart true
+dconf write /org/gnome/desktop/notifications/show-in-lock-screen false
+# dconf write
+# dconf write
+# dconf write
+# dconf write
 
-cd ~/dotfiles
-gsettings list-recursively > cur-settings
+# services
+echo -e '\nEnabling and starting services'
+systemctl enable memcached
+systemctl start memcached
 
 echo -e '\nSetup script finished!'
 
@@ -127,7 +180,7 @@ echo -e '\nSetup script finished!'
 *** in updates tab, check desired updates
 *** Additional Drivers -- autosearch
 * Download & install:
-** Firefox addons
+** Firefox addons (signing into FF should be sufficient to install them)
 *** https://addons.mozilla.org/en-US/firefox/addon/ctrl-number-to-switch-tabs/
 *** https://addons.mozilla.org/en-US/firefox/addon/lastpass-password-manager/
 *** LastPass
@@ -143,10 +196,10 @@ echo -e '\nSetup script finished!'
 ***** sudo apt remove gnome-shell-extension-ubuntu-dock && sudo apt install gnome-shell-extension-dashtodock
 **** (now incorporated in ubuntu, but the original extension is more configurable)
 *** no topleft hot corner - https://extensions.gnome.org/extension/118/no-topleft-hot-corner/
-*** do not disturb
-*** Notification counter
+*** do not disturb - https://extensions.gnome.org/extension/1480/do-not-disturb/
+*** Notification counter - https://extensions.gnome.org/extension/1386/notification-counter/
 *** NoAnnoyance (eliminate "..window is created" by auto-raising created windows [installed above]
-*** openweather
+*** openweather - https://extensions.gnome.org/extension/750/openweather/
 *** DO NOT install Indicator Multiload, breaks 18.04
 *** gnome-sushi -- preview from file browser with space bar
 *** OLD:
@@ -156,10 +209,7 @@ echo -e '\nSetup script finished!'
 ***** https://extensions.gnome.org/extension/1064/system-monitor/
 **** ubuntu appindicators
 **** steal my focus
-** Useful extras: http://www.omgubuntu.co.uk/2017/04/things-to-do-after-installing-ubuntu-17-04
-** Virtualbox [NOT NEEDED FOR DOCKER]
-**** sudo apt install virtualbox
-**** May have to do the steps here: https://askubuntu.com/a/229908/325838
+** Restart gnome after installing extensions: alt-F2, then r
 ** Docker
 *** DO NOT NEED docker-machine or virtualbox!
 *** docker installation is kind of a pain in the ass.
@@ -379,17 +429,6 @@ curl -O https://prerelease.keybase.io/keybase_amd64.deb
 sudo dpkg -i keybase_amd64.deb
 sudo apt-get install -f
 run_keybase
-** Set up memcached:
-*** Memcached setup:
-**** make sure memcached is installed, running as a service, and starting at system boot (see https://github.com/memcached/memcached/wiki/Install):
-***** sudo apt-get install memcached
-***** systemctl enable memcached
-***** systemctl start memcached (if you need it now)
-**** in your config file (linux: `/etc/memcached.conf`, memory is set by default to 64MB (via `-m 64`) -- set that to as much (max) memory as you're comfortable devoting to memcached (I'm giving it 3072MB).
-*** Connecting datomic to memcached:
-**** In your ~/.lein/profiles.clj, add `{:user {:jvm-opts ["-Ddatomic.memcachedServers=127.0.0.1:11211"]}}` (`{:user {}}` probably already exists, so just add the jvm-opts key/val)
-**** Restart memcached (linux: `service memcached restart`; mac: maybe launchctl unload and then load?)
-**** Start your local REPLs. On repeated runs, some datomic stuff should be faster (until you reboot your computer; then the cache has to build back up).
 * Future:
 ** Investigate running multiple Linux distros simultaneously
 *** Virtualbox, but it went so terribly wrong last time. Probably try this first, but clone FIRST
@@ -517,6 +556,17 @@ sudo apt install python-setuptools
 *** must follow installation directions for clojure-lint
 **** https://github.com/n2o/clojure-lint-spacemacs-layer#installation
 
+** Set up memcached [scripted]:
+*** Memcached setup:
+**** make sure memcached is installed, running as a service, and starting at system boot (see https://github.com/memcached/memcached/wiki/Install):
+***** sudo apt-get install memcached
+***** systemctl enable memcached
+***** systemctl start memcached (if you need it now)
+**** in your config file (linux: `/etc/memcached.conf`, memory is set by default to 64MB (via `-m 64`) -- set that to as much (max) memory as you're comfortable devoting to memcached (I'm giving it 3072MB).
+*** Connecting datomic to memcached:
+**** In your ~/.lein/profiles.clj, add `{:user {:jvm-opts ["-Ddatomic.memcachedServers=127.0.0.1:11211"]}}` (`{:user {}}` probably already exists, so just add the jvm-opts key/val)
+**** Restart memcached (linux: `service memcached restart`; mac: maybe launchctl unload and then load?)
+**** Start your local REPLs. On repeated runs, some datomic stuff should be faster (until you reboot your computer; then the cache has to build back up).
 * End org mode
 End of:
 NON_EXECUTABLE_ORG_MODE
