--- a/new-linux-setup.org
+++ b/new-linux-setup.org
@@ -61,7 +61,6 @@ mkdir -p ~/.vim/autoload ~/.vim/bundle && curl -LSso ~/.vim/autoload/pathogen.vi
 cd ~/.vim/bundle && git clone git://github.com/altercation/vim-colors-solarized.git
 
 # spacemacs
-# TODO may need to add
 echo -e '\nInstalling spacemacs'
 cd
 git clone https://github.com/syl20bnr/spacemacs ~/.emacs.d
@@ -78,7 +77,6 @@ sudo apt update && sudo apt install signal-desktop
 
 echo -e '\nInstalling cdhist'
 # https://github.com/bulletmark/cdhist
-# cd ~/tmp
 sudo pip3 install cdhist
 sudo curl https://raw.githubusercontent.com/bulletmark/cdhist/master/cdhist.bashrc > ~/bin/cdhist.bashrc
 
@@ -99,15 +97,15 @@ git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
 touch ~/.hushlogin
 
 # jenv
-# TODO maybe .bash_profile isn't being sourced?
+# TODO .bash_profile isn't being automatically sourced
+#   Could add it to .local-bashrc, but chances are I haven't copied or
+#   created that yet so it might get overwritten
 git clone https://github.com/gcuisinier/jenv.git ~/bin/.jenv
 echo 'export PATH="$HOME/bin/.jenv/bin:$PATH"' >> ~/.bash_profile
 echo 'eval "$(jenv init -)"' >> ~/.bash_profile
-# TODO I haven't confirmed that this works during setup:
 source ~/.bash_profile
 jenv add /usr/lib/jvm/java-11-openjdk-amd64
 jenv add /usr/lib/jvm/java-8-openjdk-amd64
-# then see [[MAKE NOTE]] & add to this section
 
 # leiningen
 curl https://raw.githubusercontent.com/technomancy/leiningen/stable/bin/lein > ~/bin/lein
@@ -152,8 +150,6 @@ dconf write /org/gnome/shell/favorite-apps "['org.gnome.Terminal.desktop', 'emac
 dconf write /org/gnome/gnome-system-monitor/graph-update-interval 3000
 dconf write /org/gnome/gnome-system-monitor/cpu-stacked-area-chart true
 dconf write /org/gnome/desktop/notifications/show-in-lock-screen false
-# dconf write
-# dconf write
 # dconf write
 # dconf write
 
